Changelog
=========

1.4 (unreleased)
----------------

- Seperate css rules based on @group hints to dedicated, already existing files
  and leave only Sunburst design-specific styles in public.css. This way, your
  own theme can depend on Sunburst but exclude the public.css file, which leads
  to way less style overrides while still having a Plone-like User interface
  (edit-bars, tables, forms, etc). Fixes pull-requests #1 and #2. Upgrade step
  included (upgrade_step_2_3).
  [thet, TH-code]

- Apply .portalMessage styling to reST admonitions
  https://github.com/plone/plonetheme.sunburst/pull/4
  [rpatterson]

- style reset on th for table.plain and IE9, fixes #11589
  [maartenkling]

- more specific Sunburst CSS on content-core dd, fixes #11840
  [maartenkling]


1.3.0 (2012-10-16)
------------------

- Style #ajax-spinner rather than inserting #kss-spinner in main_template.
  [davisagli]

- Style fixes for new style of portlet manager buttons.
  [vangheem]


1.2.7 (2012-08-11)
------------------
- fixes: Display menu falls under footer (see Events page) (IE7)
  [maartenkling]

- fixes: Live search appears under content action menu (IE7)
  [maartenkling]

- style ol/li in statictext portlet having omit border true
  [maartenkling]

- Fixes: in overlays, and especially in reference browser,
  label in an anchor link has a cursor pointer.
  Improves navigation experience in reference browser widget.
  [thomasdesvenain]

- Fixes: compare previous link margin with history records
  is smaller.
  [thomasdesvenain]

- Fixes and improvements on history popup with diff.
  [thomasdesvenain]

- Move new CSS class generation into new function called ``getColumnClasses``
  to let the old and deprecated one return column content CSS class only. This
  is important to keep all previously customized main_templates working.
  [saily]


1.2.6 (2012-06-29)
------------------

- Use sunburst_view to generate portal-column-one and portal-column-two